# cvrpwt-vessel-cargo-optimization

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  main.py  pyproject.toml
data/: read.py
data/input/sample/: config.py  projections.py  read.py
data/input/sample_2/: config.py  read.py
optimizer/: __init__.py  config.py  dataset.py  features.py  main.py  matrices.py  output.py  utils.py
tests/: __init__.py  readme.md  solution_differences.py  solution_verification.sh  test.py
